8170705: sun/net/www/protocol/http/StackTraceTest.java fails intermittently with Invalid Http response
Reviewed-by: dfuchs